# InvestmentAnalysis

./: .env  .gitignore  FX Analysis Auth.pem  Pipfile  README.md  appspec.yml  buildspec.yml  dump.rdb  mypy.ini  pyproject.toml  requirements.txt  response.json
datascience/: api.py  client.py
datascience/client/: client_init.py  client_reqs.py
datascience/services/: consume.py  detrend.py  predictions.py
datascience/services/detrend_data/: strat_facade.py
datascience/services/detrend_data/implement/: strat_design.py  strat_implmnt.py
datascience/services/detrend_data/stats/: runstats.py  statstrat.py
datascience/services/detrender/: detrend.py  strat_design.py  strat_facade.py  strat_implmnt.py
fx/: models.py  urls.py  views.py
fx/management/commands/: fetch_crypto_data.py  fetch_fx_data.py
fx/migrations/: 0001_initial.py  0002_alter_fxohlc_ticker.py  0003_cryptort.py
investment_analysis/: asgi.py  settings.py  urls.py  wsgi.py
investmentanalysis/: main.py
investmentanalysis/consume/: binance_finance.py  consumption_strategy.py  yahoo_finance.py
investmentanalysis/consume/legacy/: binance_finance.py
investmentanalysis/ml_workflow/: abstract_template.py  concrete_flows.py
playground/: explore_enum.py  main.py
scripts/: after_install.sh  before_install.sh  start_application.sh
tests/: test_api.py
