[project]
name = "investmentanalysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane Cheikh",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yfinance (>=0.2.65,<0.3.0)",
    "python-binance (>=1.0.29,<2.0.0)",
    "cryptography (>=45.0.5,<46.0.0)"
]

[tool.poetry]
packages = [{include = "investmentanalysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
